--- a/glowstheme.css
+++ b/glowstheme.css
@@ -64,7 +64,7 @@
   --dnd-color: #982929;
   --streaming-color: #593695;
   --offline-color: #808080;
-  --main-font: Redacted;
+  --main-font: Whitney;
   --code-font: Consolas;
   --channels-width: 220px;
   --members-width: 240px;
